--- a/package.json
+++ b/package.json
@@ -14,30 +14,32 @@
   },
   "dependencies": {
     "babel-eslint": "^10.1.0",
-    "eslint": "^8.26.0",
+    "eslint": "^8.23.0",
     "eslint-config-react-app": "^7.0.1",
     "eslint-config-standard": "^17.0.0",
     "eslint-config-standard-jsx": "^11.0.0",
     "eslint-config-standard-react": "^11.0.1",
     "eslint-plugin-import": "^2.26.0",
     "eslint-plugin-node": "^11.1.0",
-    "eslint-plugin-promise": "^6.1.1",
-    "eslint-plugin-react": "^7.31.10",
+    "eslint-plugin-promise": "^6.0.1",
+    "eslint-plugin-react": "^7.31.4",
     "husky": "^8.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "ts-node": "^10.9.1",
+    "typescript": "^4.8.2",
     "vite-plugin-lint": "^1.0.1",
-    "vite-plugin-linter": "^1.2.0"
+    "vite-plugin-linter": "^1.2.0",
+    "vite-tsconfig-paths": "^3.5.0"
   },
   "devDependencies": {
-    "@types/react": "^18.0.17",
+    "@types/react": "^18.0.18",
     "@types/react-dom": "^18.0.6",
-    "@typescript-eslint/eslint-plugin": "^5.40.1",
-    "@typescript-eslint/parser": "^5.40.1",
-    "@vitejs/plugin-react": "^2.1.0",
-    "typescript": "^4.6.4",
-    "vite": "^3.1.0",
-    "vite-plugin-environment": "^1.1.3",
-    "vite-tsconfig-paths": "^3.5.2"
+    "@typescript-eslint/eslint-plugin": "^5.36.1",
+    "@typescript-eslint/parser": "^5.36.1",
+    "@vitejs/plugin-react": "1.3.0",
+    "svg-jest": "^1.0.1",
+    "vite": "3.0.9",
+    "vite-plugin-environment": "^1.1.2"
   }
 }
