--- a/package.json
+++ b/package.json
@@ -2,11 +2,13 @@
   "name": "pomodoro-app",
   "private": true,
   "version": "0.0.0",
-  "type": "module",
   "scripts": {
     "dev": "vite --host",
     "build": "tsc && vite build",
     "preview": "vite preview",
+    "coverage": "vitest run --coverage",
+    "test": "vitest",
+    "test:ui": "vitest --ui",
     "lint": "eslint src --ext ts,tsx",
     "lint:fix": "yarn lint --fix",
     "type-check": "tsc --project tsconfig.json --pretty --noEmit",
@@ -25,21 +27,29 @@
     "eslint-plugin-react": "^7.31.4",
     "husky": "^8.0.1",
     "react": "^18.2.0",
+    "react-circular-progressbar": "^2.1.0",
     "react-dom": "^18.2.0",
     "ts-node": "^10.9.1",
     "typescript": "^4.8.2",
+    "use-sound": "^4.0.1",
     "vite-plugin-lint": "^1.0.1",
     "vite-plugin-linter": "^1.2.0",
     "vite-tsconfig-paths": "^3.5.0"
   },
   "devDependencies": {
+    "@testing-library/jest-dom": "^5.16.5",
+    "@testing-library/react": "^13.4.0",
     "@types/react": "^18.0.18",
     "@types/react-dom": "^18.0.6",
     "@typescript-eslint/eslint-plugin": "^5.36.1",
     "@typescript-eslint/parser": "^5.36.1",
     "@vitejs/plugin-react": "1.3.0",
+    "@vitest/coverage-c8": "^0.24.3",
+    "@vitest/ui": "^0.24.3",
+    "jsdom": "^20.0.1",
     "svg-jest": "^1.0.1",
     "vite": "3.0.9",
-    "vite-plugin-environment": "^1.1.2"
+    "vite-plugin-environment": "^1.1.2",
+    "vitest": "^0.24.3"
   }
 }
