--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react-circular-progressbar": "^2.1.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.38.0",
+    "sass": "^1.55.0",
     "ts-node": "^10.9.1",
     "typescript": "^4.8.2",
     "use-sound": "^4.0.1",
