--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "lint": "eslint src --ext ts,tsx",
     "lint:fix": "yarn lint --fix",
     "type-check": "tsc --project tsconfig.json --pretty --noEmit",
-    "prepare": "husky install"
+    "prepare": "husky install",
+    "storybook": "start-storybook -p 6006",
+    "build-storybook": "build-storybook"
   },
   "dependencies": {
     "babel-eslint": "^10.1.0",
@@ -37,9 +39,20 @@
     "use-sound": "^4.0.1",
     "vite-plugin-lint": "^1.0.1",
     "vite-plugin-linter": "^1.2.0",
-    "vite-tsconfig-paths": "^3.5.0"
+    "vite-tsconfig-paths": "^3.5.0",
+    "zustand": "^4.1.4"
   },
   "devDependencies": {
+    "@storybook/addon-essentials": "^6.5.13",
+    "@storybook/addon-interactions": "^6.5.13",
+    "@storybook/addon-links": "^6.5.13",
+    "@storybook/addon-postcss": "^2.0.0",
+    "@storybook/builder-vite": "^0.2.5",
+    "@storybook/builder-webpack5": "^6.5.13",
+    "@storybook/manager-webpack5": "^6.5.13",
+    "@storybook/preset-create-react-app": "^4.1.2",
+    "@storybook/preset-scss": "^1.0.3",
+    "@storybook/react": "^6.5.13",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@types/react": "^18.0.18",
@@ -49,7 +62,16 @@
     "@vitejs/plugin-react": "1.3.0",
     "@vitest/coverage-c8": "^0.24.3",
     "@vitest/ui": "^0.24.3",
+    "css-loader": "^6.7.2",
+    "dotenv": "^16.0.3",
     "jsdom": "^20.0.1",
+    "path": "^0.12.7",
+    "postcss": "^8",
+    "sass-loader": "^13.2.0",
+    "storybook-addon-sass-postcss": "^0.1.3",
+    "storybook-react-context": "^0.6.0",
+    "style-loader": "^3.3.1",
+    "tsconfig-paths-webpack-plugin": "^4.0.0",
     "vite": "3.0.9",
     "vite-plugin-environment": "^1.1.2",
     "vitest": "^0.24.3"
