--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,5 +9,22 @@ services:
       - ./:/app
     ports:
       - 5173:5173
-    command: >
-      sh -c "yarn && yarn dev"
+    command:
+      - /bin/sh
+      - -c
+      - |
+        yarn dev
+
+  book:
+    build: .
+    container_name: pomodoro-book
+    restart: always
+    volumes:
+      - ./:/app
+    ports:
+      - 6006:6006
+    command:
+      - /bin/sh
+      - -c
+      - |
+        yarn storybook
